--- a/fe/package.json
+++ b/fe/package.json
@@ -14,7 +14,12 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@noble/curves": "^2.0.1",
+    "@noble/hashes": "^2.0.1",
     "@tailwindcss/vite": "^4.1.17",
+    "@types/argon2-browser": "^1.18.4",
+    "argon2-browser": "^1.18.0",
+    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.9.6",
