--- a/be/.env.example
+++ b/be/.env.example
@@ -1,5 +1,7 @@
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=chatapp
-DB_PORT=5433
-DATABASE_URL="postgresql://postgres:postgres@localhost:5433/chatapp?schema=public"
+DB_USER="your_username_here"
+DB_PASSWORD="your_password_here"
+DB_NAME="your_database_name_here"
+DB_PORT="5432"
+DATABASE_URL="postgresql://your_username_here:your_password_here@localhost:5432/your_database_name_here?schema=public"
+
+JWT_SECRET="your_jwt_secret_key_here"
