--- a/fe/package.json
+++ b/fe/package.json
@@ -20,9 +20,11 @@
     "@types/argon2-browser": "^1.18.4",
     "argon2-browser": "^1.18.0",
     "axios": "^1.13.2",
+    "prettier": "^3.6.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.9.6",
+    "save-dev": "^0.0.1-security",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
