--- a/be/docker-compose.yml
+++ b/be/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     env_file:
       - .env
     environment:
-      DATABASE_URL: "postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}?schema=public"
+      DATABASE_URL: "postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}?schema=public&&connection_limit=5"
       GIN_MODE: debug
     depends_on:
       - db
