--- a/fe/package.json
+++ b/fe/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^19.2.0",
     "react-router": "^7.9.6",
     "save-dev": "^0.0.1-security",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
