--- a/fe/.env.example
+++ b/fe/.env.example
@@ -1,2 +1,2 @@
 VITE_API_BASE_URL=http://localhost:8080/api
-VITE_PROTECTED_BASE_URL=http://localhost:8080/protected
+VITE_PROTECTED_BASE_URL=http://localhost:8080/api/protected
