--- a/be/.env.example
+++ b/be/.env.example
@@ -1,6 +1,12 @@
+GIN_MODE="debug"
+
 DB_USER="your_username_here"
 DB_PASSWORD="your_password_here"
 DB_NAME="your_database_name_here"
 
 ACCESS_TOKEN_SECRET="your_jwt_access_token_secret"
 REFRESH_TOKEN_SECRET="your_jwt_refresh_token_secret"
+
+ALLOWED_ORIGINS="https://yourfrontend.vercel.app"
+
+COOKIE_DOMAIN="yourdomain.server.app"
