--- a/fe/package.json
+++ b/fe/package.json
@@ -20,6 +20,7 @@
     "@types/argon2-browser": "^1.18.4",
     "argon2-browser": "^1.18.0",
     "axios": "^1.13.2",
+    "elliptic": "^6.6.1",
     "js-sha3": "^0.9.3",
     "prettier": "^3.7.2",
     "react": "^19.2.0",
